tests/valid/trait/method_call_short_ufcs_type_args.facet
trait Mapper {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T;
}

impl Mapper for unrestricted isize {
  fn map<T>(self: Self, value: unrestricted T) -> unrestricted T {
    value
  }
}

fn main(x: unrestricted isize) -> unrestricted bool {
  (Mapper::map<unrestricted bool> x true)
}
