tests/invalid/trait/generic_impl_extra_arg.facet
trait Convert<T>;

struct Box {
  value: unrestricted isize
}

impl Convert<affine isize, affine bool> for affine Box;

fn main() -> unrestricted () {
  ()
}
